--- a/index.html
+++ b/index.html
@@ -28,23 +28,59 @@
 			    
 </header>
 
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand" href="#" style="margin-left: 150px">Домены</a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
-
-  <div class="collapse navbar-collapse" id="navbarSupportedContent">
-    <ul class="navbar-nav mr-auto">
-      <li class="nav-item active">
-        <a class="nav-link" href="#">Калькулятор<span class="sr-only">(current)</span></a>
-      </li>
-    </ul>
-  </div>
+<nav class="nav nav-pills flex-column flex-sm-row">
+  <a class="flex-sm-fill text-sm-center text-dark bg-secondary nav-link active" href="#">Домены</a>
+  <a class="flex-sm-fill text-sm-center text-body nav-link" href="https://www.reg.ru">Reg.ru</a>
+  <a class="flex-sm-fill text-sm-center text-body nav-link" href="https://fit.mospolytech.ru">Fit</a>
+  <a class="flex-sm-fill text-sm-center text-body nav-link" href="https://mospolytech.ru">Polytech</a>
+  <a class="flex-sm-fill text-sm-center text-body nav-link" href="https://github.com/prostocema/web-2019-181352-abramov">Git</a>
 </nav>
 
+<!-- <div id="carousel" class="carousel slide col-7" data-ride="carousel">
+  <-- Индикаторы -->
+<!--   <ol class="carousel-indicators">
+    <li data-target="#carousel" data-slide-to="0" class="active"></li>
+    <li data-target="#carousel" data-slide-to="1"></li>
+  </ol>
+  <div class="carousel-inner">
+    <div class="carousel-item active">
+      <img class="img-fluid car" src="s1200.jpg" alt="...">
+    </div>
+    <div class="carousel-item">
+      <img class="img-fluid car" src="sci-fi-cityscape-gorod-budushchee-zdaniia-ulitsa-perekhod-ne.jpg" alt="...">
+    </div>
+  </div> -->
+<div class="container">
+	<div class="row">
+		<div class="card border-dark col-12 col-sm-5 col-lg-3" style="width: 18rem; margin-left: 30px">
+		  <img src="Sertifikaciya-serverov.jpeg" class="card-img-top" alt="...">
+		  <div class="card-body">
+		    <h5 class="card-title">Хостинг</h5>
+		    <p class="card-text">Надёжность, доступность и качество.</p>
+		    <a href="#" class="btn btn-secondary">Подробнее</a>
+		  </div>
+		</div>
 
+		<div class="card border-dark col-12 col-sm-5 col-lg-3" style="width: 18rem; margin-left: 30px">
+		  <img src="Hakkery-Android-Smartfony-1.jpg" class="card-img-top" alt="...">
+		  <div class="card-body">
+		    <h5 class="card-title">SSL-сертификаты</h5>
+		    <p class="card-text">Гарантия безопасности передаваемых данных.</p>
+		    <a href="#" class="btn btn-secondary">Подробнее</a>
+		  </div>
+		</div>
 
+		<div class="card border-dark col-12 col-sm-5 col-lg-3" style="width: 18rem;margin-left: 30px">
+		  <img src="ser.jpg" class="card-img-top" alt="...">
+		  <div class="card-body">
+		    <h5 class="card-title">Автоматически</h5>
+		    <p class="card-text">Управления автоматизированно.</p>
+		    <a href="#" class="btn btn-secondary">Подробнее</a>
+		  </div>
+		</div>
+
+	</div>
+</div>
 
 
 
