--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
 <nav class="nav nav-pills flex-column flex-sm-row">
   <a class="flex-sm-fill text-sm-center text-dark bg-secondary nav-link active" href="#">Домены</a>
   <a class="flex-sm-fill text-sm-center text-body nav-link" href="https://www.reg.ru">Reg.ru</a>
+  <a class="flex-sm-fill text-sm-center text-body nav-link" href="#">Калькулятор</a>
   <a class="flex-sm-fill text-sm-center text-body nav-link" href="https://fit.mospolytech.ru">Fit</a>
   <a class="flex-sm-fill text-sm-center text-body nav-link" href="https://mospolytech.ru">Polytech</a>
   <a class="flex-sm-fill text-sm-center text-body nav-link" href="https://github.com/prostocema/web-2019-181352-abramov">Git</a>
@@ -79,6 +80,29 @@
 		  </div>
 		</div>
 
+	</div>
+</div>
+
+<div class="container">
+	<div class="row">
+		<div class="col-8 news">
+			<p><b>Новости</b></p>
+			<p class="data"><b>10 июня 2019 г.</b></p>
+			<p class="info">Экзамен по языкам программирования продлился около 17 часов.</p>
+			<p class="data"><b>15 июня 2019 г.</b></p>
+			<p class="info">Страшно на Вебе от того, что всего на код 4 часа...</p>
+			<a href="https://mospolytech.ru/index.php"><button type="button" class="btn btn-outline-dark">
+  				Больше новостей <span class="badge badge-dark"> 4</span>
+			</button></a>
+		</div>
+		<div class="col-3 news">
+			<p><b>Мероприятия</b></p>
+			<p class="data"><b>19 июня 2019 г.</b></p>
+			<p class="info">Говорят на математике тройка автоматом за посещения, но все равно не по себе.</p>
+			<a href="https://mospolytech.ru/index.php"><button type="button" class="btn btn-outline-dark">
+  				Больше мероприятий <span class="badge badge-dark"> 2</span>
+			</button></a>
+		</div>
 	</div>
 </div>
 
