--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 	<title>Exam</title>
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 	<link rel="stylesheet" type="text/css" href="style.css">
+	<link rel="shortcut icon" href="pictures/unnamed.jpg" type="image/png">
 </head>
 <body>
 
@@ -11,7 +12,7 @@
 	<div class="container">
 		<div class="row">
 			<div class="col-4">
-				<a href="https://www.reg.ru"><img src="log.png" width="100px"></a>
+				<a href="https://www.reg.ru"><img src="pictures/log.png" width="100px"></a>
 			</div>
 			<div class="col-4">
 				<form class="form-inline my-2 my-lg-0">
@@ -31,49 +32,63 @@
 <nav class="nav nav-pills flex-column flex-sm-row">
   <a class="flex-sm-fill text-sm-center text-dark bg-secondary nav-link active" href="#">Домены</a>
   <a class="flex-sm-fill text-sm-center text-body nav-link" href="https://www.reg.ru">Reg.ru</a>
-  <a class="flex-sm-fill text-sm-center text-body nav-link" href="#">Калькулятор</a>
+  <a class="flex-sm-fill text-sm-center text-body nav-link" href="calculator.html">Калькулятор</a>
   <a class="flex-sm-fill text-sm-center text-body nav-link" href="https://fit.mospolytech.ru">Fit</a>
   <a class="flex-sm-fill text-sm-center text-body nav-link" href="https://mospolytech.ru">Polytech</a>
   <a class="flex-sm-fill text-sm-center text-body nav-link" href="https://github.com/prostocema/web-2019-181352-abramov">Git</a>
 </nav>
 
-<!-- <div id="carousel" class="carousel slide col-7" data-ride="carousel">
-  <-- Индикаторы -->
-<!--   <ol class="carousel-indicators">
-    <li data-target="#carousel" data-slide-to="0" class="active"></li>
-    <li data-target="#carousel" data-slide-to="1"></li>
-  </ol>
-  <div class="carousel-inner">
-    <div class="carousel-item active">
-      <img class="img-fluid car" src="s1200.jpg" alt="...">
-    </div>
-    <div class="carousel-item">
-      <img class="img-fluid car" src="sci-fi-cityscape-gorod-budushchee-zdaniia-ulitsa-perekhod-ne.jpg" alt="...">
-    </div>
-  </div> -->
 <div class="container">
 	<div class="row">
-		<div class="card border-dark col-12 col-sm-5 col-lg-3" style="width: 18rem; margin-left: 30px">
-		  <img src="Sertifikaciya-serverov.jpeg" class="card-img-top" alt="...">
-		  <div class="card-body">
+		<div class="col-11">
+			<div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+			  <div class="carousel-inner">
+			    <div class="carousel-item active col-12">
+			      <img src="pictures/pic1.jpg" class="d-block w-100" alt="Московский">
+			    </div>
+			    <div class="carousel-item col-12">
+			      <img src="pictures/pic2.jpg" class="d-block w-100" alt="Политехнический">
+			    </div>
+			    <div class="carousel-item col-12">
+			      <img src="pictures/pic3.jpg" class="d-block w-100" alt="Университет">
+			    </div>
+			  </div>
+			  <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+			    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+			    <span class="sr-only">Previous</span>
+			  </a>
+			  <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+			    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+			    <span class="sr-only">Next</span>
+			  </a>
+			</div>
+		</div>
+	</div>
+</div>
+
+<div class="container">
+	<div class="row">
+		<div class="card border-dark col-12 col-sm-5 col-lg-3" style="width: 18rem; margin-left: 50px">
+		  <img src="pictures/Sertifikaciya-serverov.jpeg" class="card-img-top" alt="...">
+		  <div class="card-body cards">
 		    <h5 class="card-title">Хостинг</h5>
 		    <p class="card-text">Надёжность, доступность и качество.</p>
 		    <a href="#" class="btn btn-secondary">Подробнее</a>
 		  </div>
 		</div>
 
-		<div class="card border-dark col-12 col-sm-5 col-lg-3" style="width: 18rem; margin-left: 30px">
-		  <img src="Hakkery-Android-Smartfony-1.jpg" class="card-img-top" alt="...">
-		  <div class="card-body">
+		<div class="card border-dark col-12 col-sm-5 col-lg-3" style="width: 18rem; margin-left: 50px">
+		  <img src="pictures/Hakkery-Android-Smartfony-1.jpg" class="card-img-top" alt="...">
+		  <div class="card-body cards">
 		    <h5 class="card-title">SSL-сертификаты</h5>
 		    <p class="card-text">Гарантия безопасности передаваемых данных.</p>
 		    <a href="#" class="btn btn-secondary">Подробнее</a>
 		  </div>
 		</div>
 
-		<div class="card border-dark col-12 col-sm-5 col-lg-3" style="width: 18rem;margin-left: 30px">
-		  <img src="ser.jpg" class="card-img-top" alt="...">
-		  <div class="card-body">
+		<div class="card border-dark col-12 col-sm-5 col-lg-3" style="width: 18rem;margin-left: 50px">
+		  <img src="pictures/ser.jpg" class="card-img-top" alt="...">
+		  <div class="card-body cards">
 		    <h5 class="card-title">Автоматически</h5>
 		    <p class="card-text">Управления автоматизированно.</p>
 		    <a href="#" class="btn btn-secondary">Подробнее</a>
@@ -106,7 +121,84 @@
 	</div>
 </div>
 
+<div class="container">
+	<h1 style="text-align: center;">Почему мы? Это просто</h1>
+	<div class="row">
+		<div class="col">
+			<div class="recom">
+				<p class="textt"><b>№1</b></p>
+			</div>
+			<p style="text-align: center">Во всем мире.</p>
+		</div>
+		<div class="col">
+			<div class="recom">
+				<p class="textt"><b>Млрды</b></p>
+			</div>
+			<p style="text-align: center">Оказанных услуг.</p>
+		</div>
+		<div class="col">
+			<div class="recom">
+				<p class="textt"><b>Млны</b></p>
+			</div>
+			<p style="text-align: center">Клиентов.</p>
+		</div>
+		<div class="col">
+			<div class="recom">
+				<p class="textt"><b>24/7</b></p>
+			</div>
+			<p style="text-align: center">Поддержка.</p>
+		</div>
+	</div>
+</div>
 
+<div class="container">
+	<h1 style="text-align: center; margin-top: 15px">Клиенты</h1>
+	<div class="row">
+		<div class="col-4">
+			<a href="https://mail.ru"><img src="pictures/logomail.png" style="width: 200px"></a>
+		</div>
+		<div class="col-4">
+			<a href="https://vk.com"><img src="pictures/img_155681.png" style="width: 150px"></a>
+		</div>
+		<div class="col-4">
+			<a href="https://avito.ru"><img src="pictures/wnPRwd59tn8.jpg" style="width: 300px"></a>
+		</div>
+	</div>
+</div>
+
+<div class=" container people">
+	<div class="row">
+		<div class="col-7">
+		<h3>Отзывы о нас:</h3>
+		<p>Мой сайт на этом хостинге уже третий год, у них же регистрировал доменное имя. Полностью доволен, нареканий нет, надежный и быстрый, ни разу не было такого, что сайт недоступен или тормозит. Масса полезных связанных сервисов. Наверное единственный незначительный минус - цена, она не такая низкая, как у других хостеров, однако для меня всегда лучше заплатить чуть больше, но быть уверенным в том, что никаких проблем не возникнет. Если резюмировать, то это взрослый, состоявшийся хостинг для взрослых, серьезных людей.</p>
+		<p>Александр Васюткин</p>
+		<form>
+			<div class="form-group">
+		    <label><b>toouchme@yandex.ru</b></label>
+		    <input type="text" class="form-control" placeholder="Напишите на почту">
+		  	</div>
+		  	<button type="submit" class="btn btn-outline-dark">Отправить</button>
+		</form>
+		</div>
+		<div class="col-4">
+			<img src="pictures/icon1-02.png" width="300px">
+		</div>
+	</div>
+</div>
+
+<div class="card text-center">
+  <div class="card-header">
+    Наши партнеры
+  </div>
+  <div class="card-body">
+    <p class="card-text">
+    	<img src="pictures/Mastercard.jpg" width="200px">
+    	<img src="pictures/webmoney-logo.png" width="200px">
+    	<img src="pictures/cards-1100x1100.png" width="200px">
+    </p>
+    <a href="#" class="btn btn-outline-dark">Наверх</a>
+  </div>
+</div>
 
 
 
