--- a/calculator.html
+++ b/calculator.html
@@ -66,6 +66,7 @@
 	</div>
 	<div class="row">
 		<div class="col-3 cart">
+		<a>
 			<p>Host-Lite</p>
 			<b style="font-size: 25px">7 ГБ SSD</b>
 			<p>15 сайтов<br>
@@ -74,6 +75,7 @@
 			ISPmanager<br>
 			Plesk</p>
 			<b style="font-size: 20px">от 24 ₽/мес.</b>
+		</a>
 		</div>
 		<div class="col-3 cart">
 			<p>Host-B</p>
@@ -97,6 +99,45 @@
 			CPanel</p>
 			<b style="font-size: 20px">от 54 ₽/мес.</b>
 		</div>
+	</div>
+</div>
+
+<div class="container">
+	<div class="column">
+		<div class="col-12 textik"><p>Срок:</p></div>
+		<div class="row textik">
+			<div class="col-5 ">
+				<p>1 месяц</p>
+			</div>
+			<div class="col-2 ">
+				<p>59р.</p>
+			</div>
+		</div>
+		<div class="row textik">
+			<div class="col-5 ">
+				<p>3 месяц</p>
+			</div>
+			<div class="col-2 ">
+				<p>169р.</p>
+			</div>
+		</div>
+		<div class="row textik">
+			<div class="col-5 ">
+				<p>6 месяц</p>
+			</div>
+			<div class="col-2 ">
+				<p>269р.</p>
+			</div>
+		</div>
+		<div class="row textik">
+			<div class="col-5 ">
+				<p>1 год</p>
+			</div>
+			<div class="col-2 ">
+				<p>369р.</p>
+			</div>
+		</div>	
+		<button type="button" class="btn btn-dark" style="float: right; margin: 10px;">Оплатить</button>
 	</div>
 </div>
 
